--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "onLanguage:objective-c",
     "onLanguage:objective-cpp"
   ],
-  "main": "./out/extension.js",
+  "main": "./out/bundle",
   "exclude": [
     "./vscode-clangd/**"
   ],
@@ -49,8 +49,9 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
+    "esbuild": "esbuild ./src/extension.ts --bundle --outfile=out/bundle.js --external:vscode --format=cjs --platform=node",
+    "vscode:prepublish": "npm run esbuild -- --minify --keep-names",
+    "compile": "npm run esbuild -- --sourcemap",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
@@ -67,6 +68,7 @@
     "@types/node": "20.x",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.11.0",
+    "esbuild": "^0.14.13",
     "eslint": "^8.57.0",
     "typescript": "^5.4.5",
     "@vscode/test-cli": "^0.0.9",
